--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.1",
+    "styled-components": "^4.1.3",
     "use-async-effect": "^2.2.2"
   },
   "scripts": {
